tests/NormalTests/paczka1/fuzzy1/27523548.err
Error in line 7: OYidzAdus S783 6,4
Error in line 10: xq45nSl2tu4 S655 81,1
Error in line 9: OYidzAdus S448 54,2
Error in line 15: OYidzAdus S655 75,8
Error in line 18: l7Pd4rRCe S783 168,71
Error in line 14: S655 A639 0,6
Error in line 25: ofl4LVc S655 72,9
Error in line 5: l7Pd4rRCe S783 51,1
Error in line 30: l7Pd4rRCe S655 98,8
Error in line 33: l7Pd4rRCe S783 79,9
Error in line 21: xq45nSl2tu4 S448 41,9
